[package]
name = "chiabip158"
version = "1.5.0"
edition = "2021"
links = "chiabip158"

[workspace]
resolver = "2"
members = ["fuzz"]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"

# This uses a modified version of cc-rs for now https://github.com/rust-lang/cc-rs
# Because of this issue https://github.com/rust-lang/cc-rs/issues/1001
# Which is fixed in this pull request https://github.com/rust-lang/cc-rs/pull/1007
# TLDR: --show-sdk-platform-version needs to be replaced with --show-sdk-version
# Once this is released, this can be reverted back to the main crate
cc = { git = "https://github.com/0123456789-jpg/cc-rs", rev = "41a8731" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
