[package]
name = "chiabip158"
version = "1.5.4"
edition = "2021"
license = "Apache-2.0"
description = "Bindings to the chiabip158 C++ library block filters."
authors = ["Brandon Haggstrom <b.haggstrom@chia.net>"]
homepage = "https://github.com/Chia-Network/chiabip158"
repository = "https://github.com/Chia-Network/chiabip158"
links = "chiabip158"

[workspace]
resolver = "2"
members = ["fuzz"]

[dependencies]

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.90"

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.8"
